[package]
name = "grrs"
version = "0.1.0"
authors = ["Julian Hu <julianhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["linked-lists"]

[dependencies]
structopt = "0.3"
linked-lists = { path = "linked-lists" }
walkdir = "2"
regex = "1.5"